BUGFIX: fixes alignment of medium and mobile baseline view scene result header buttons

--- a/src/app/components/results-menu/baseline-results-menu/baseline-results-menu.component.scss
+++ b/src/app/components/results-menu/baseline-results-menu/baseline-results-menu.component.scss
@@ -116,7 +116,7 @@ $config: mat.define-typography-config();
   }
   text-align: center;
   font-size: 12px;
-  margin-left: -10px;
+  margin-left: auto;
   line-height: 15px;
 }
 
@@ -132,6 +132,7 @@ $config: mat.define-typography-config();
 
 .baseline-header--wrapper {
  display: flex;
+ column-gap: .4em;
 }
 
 .baseline-detail-view--layout {
@@ -156,4 +157,11 @@ $config: mat.define-typography-config();
   flex: 1 1 100%;
   box-sizing: border-box;
   max-width: 45%;
+}
+
+.scenes-list-button-container {
+  width: 100%;
+  mat-button-toggle-group {
+    margin: auto
+  }
 }
